<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.gatech.cs2340.ratlab.controllers.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/sightingsButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:onClick="onClickSightings"
            android:text="@string/rat_sightings" />

        <Button
            android:id="@+id/reportButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:onClick="onClickReportSightings"
            android:text="@string/report" />

        <Button
            android:id="@+id/mapDisplayButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:onClick="onClickMapDisplay"
            android:text="Map Display" />

        <Button
            android:id="@+id/historicalButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="Historical Graph" />

        <Button
            android:id="@+id/logoutButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:onClick="logout"
            android:text="@string/logout" />

    </LinearLayout>
</android.widget.RelativeLayout>

